fix fieldset and label align in ckeditor admin styles

--- a/portal/apps/core/static/css/admin_article_ckeditor.css
+++ b/portal/apps/core/static/css/admin_article_ckeditor.css
@@ -13,3 +13,10 @@ tr.dynamic-extensions td.field-body {
 div.ck-content p {
     margin-left: revert;
 }
+
+fieldset .fieldBox {
+  float: unset;
+}
+.aligned label {
+  padding-right: 0px !important;
+}
